# Tiger-myproject

./: @ohos.myproject.d.ts  BUILD.gn  README.md  buzzer_control.cpp  fan_control.cpp  led_control.cpp  light_sensor.cpp  llama_client.cpp  llama_client.h  myproject_napi.cpp  myserial.h  pump_control.cpp  sg90.cpp  soil_moisture.cpp
app/inc/: device_identity.h  llama_client.h  mqtt_global.h  mqtt_payload_builder.h  mqttc_client.h  myserial.h  sensor_data_provider.h  wifi_udp_receiver.h
app/src/: device_identity.cpp  llama_client.cpp  mqtt_global.cpp  mqtt_payload_builder.cpp  mqttc_client.cpp  myserial.cpp  myserial.cpp.bak  sensor_data_provider.cpp  wifi_udp_receiver.cpp
control/inc/: auto_control.h
control/src/: auto_control.cpp
drivers/inc/: buzzer_control.h
drivers/src/: buzzer_control.cpp  led_control.cpp  light_sensor.cpp  pump_control.cpp
esp32_s3/: platformio.ini
esp32_s3/include/: camera_module.h  dht_module.h  jw01_module.h  soil_module.h  udp_broadcast.h
esp32_s3/src/: camera_module.cpp  dht_module.cpp  jw01_module.cpp  main.cpp  main.cpp.bak  soil_module.cpp  udp_broadcast.cpp
ets/: Index.ets  README.nd  index.ets  mqtt_component.ets  mqtt_service.ets
ets/pages/: Index.ets  README.md  llama_chat.ets  mqtt_component.ets  mqtt_service.ets
hal/inc/: um_adc.h
hal/src/: serial_uart.c
inc/: fan_control.h  led_control.h  light_sensor.h  llama_client.h  pump_control.h  serial_uart.h  sg90.h  soil_moisture.h
napi/: buzzer_napi.cpp  control_napi.cpp  fan_napi.cpp  image_capture_callback_manager.cpp  image_capture_callback_manager.h  led_napi.cpp  light_sensor_napi.cpp  llama_napi.cpp  mqtt_napi.cpp  myproject_napi_register.h  pump_napi.cpp  serial_napi.cpp  sg90_napi.cpp  soil_moisture_napi.cpp  udp_napi.cpp
qt/: Test.pro  main.cpp  mainwindow.cpp  mainwindow.h  mqttconfigdialog.cpp  mqttconfigdialog.h
src/: fan_control.cpp  llama_client.cpp  myserial.cpp  sg90.cpp  soil_moisture.cpp
