import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_shared_library("myproject_napi") {
  include_dirs = [ 
    "inc",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/include/platform",
    "//commonlibrary/c_utils/base/include",
    "//foundation/ace/napi/interfaces/kits",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/bounds_checking_function/include",
   ]

  sources = [
    "myproject_napi.cpp",
    "src/buzzer_control.cpp",
    "src/fan_control.cpp",
    "src/led_control.cpp",
    "src/light_sensor.cpp",
    "src/pump_control.cpp",
    "src/serial_uart.c",
    "src/sg90.cpp",
    "src/soil_moisture.cpp",
    "src/myserial.cpp",
    "src/um_adc.c",
    "src/um_pwm.c",
    "src/um_gpio.c",
    "src/llama_client.cpp"
  ]

  #deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdf_platform",
    "hdf_core:hdf_posix_osal",
  ]

  relative_install_dir = "module"
  subsystem_name = "sub_samp"
  part_name = "cpt_samp"
}