import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_shared_library("myproject_napi") {
  include_dirs = [ 
    "hal/inc",
    "drivers/inc",
    "app/inc",
    "control/inc",
    "third_party/cJSON/include",
    "third_party/MQTT-C/include",
    "//drivers/hdf_core/framework/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/framework/include/platform",
    "//commonlibrary/c_utils/base/include",
    "//foundation/ace/napi/interfaces/kits",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/bounds_checking_function/include",
   ]

  sources = [
    "myproject_napi.cpp",
    "napi/control_napi.cpp",
    "napi/buzzer_napi.cpp",
    "napi/fan_napi.cpp",
    "napi/led_napi.cpp",
    "napi/light_sensor_napi.cpp",
    "napi/llama_napi.cpp",
    "napi/mqtt_napi.cpp",
    "napi/pump_napi.cpp",
    "napi/image_capture_callback_manager.cpp",
    "napi/serial_napi.cpp",
    "napi/sg90_napi.cpp",
    "napi/soil_moisture_napi.cpp",
    "napi/udp_napi.cpp",
    "hal/src/serial_uart.c",
    "hal/src/um_adc.c",
    "hal/src/um_gpio.c",
    "hal/src/um_pwm.c",
    "third_party/cJSON/src/cJSON.c",
    "third_party/MQTT-C/src/mqtt.c",
    "third_party/MQTT-C/src/mqtt_pal.c",
    "drivers/src/buzzer_control.cpp",
    "drivers/src/fan_control.cpp",
    "drivers/src/led_control.cpp",
    "drivers/src/light_sensor.cpp",
    "drivers/src/pump_control.cpp",
    "drivers/src/sg90.cpp",
    "drivers/src/soil_moisture.cpp",
    "app/src/myserial.cpp",
    "app/src/wifi_udp_receiver.cpp",
    "app/src/llama_client.cpp",
    "app/src/mqttc_client.cpp",
    "app/src/mqtt_global.cpp",
    "app/src/mqtt_payload_builder.cpp",
    "app/src/sensor_data_provider.cpp",
    "control/src/auto_control.cpp",
  ]

  #deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdf_platform",
    "hdf_core:hdf_posix_osal",
  ]

  relative_install_dir = "module"
  subsystem_name = "sub_samp"
  part_name = "cpt_samp"
}